@@ -1,3 +1,5 @@
+* unit test: Amended failing Element#identify test. [Andrew Dupont, jddalton]
+
 * Fix an issue with calling Event.pointer before the DOM is loaded. [kangax, jddalton] [#4 state:resolved]
 
 * Account for context to assure Element#down, et al., work properly with Selectors API. [Andrew Dupont]
